# mnist-handwritten-digit-recognizer

./: .gitignore  README.md  dump_dataset.py  meson.build  preprocess_image.py
src/: activation_function.cpp  activation_function.hpp  args.cpp  args.hpp  differentiable_value.cpp  differentiable_value.hpp  error_function.hpp  exceptions.cpp  exceptions.hpp  float.hpp  function.hpp  layer.hpp  main.cpp  matrix.cpp  matrix.hpp  meson.build  neural_network.cpp  neural_network.hpp  neural_network_builder.cpp  neural_network_builder.hpp  optimizer.hpp  utils.cpp  utils.hpp
src/activation_functions/: leaky_relu.cpp  leaky_relu.hpp  meson.build  sigmoid.cpp  sigmoid.hpp  tanh.cpp  tanh.hpp
src/autograd/: autograd.cpp  autograd.hpp  meson.build
src/autograd/math/: addition.cpp  division.cpp  exponent.cpp  log.cpp  meson.build  multiplication.cpp  neg.cpp  pow.cpp  subtraction.cpp
src/error_functions/: cross_entropy_softmax.cpp  cross_entropy_softmax.hpp  mean.cpp  mean.hpp  mean_squared.cpp  mean_squared.hpp  mean_squared_error.cpp  mean_squared_error.hpp  meson.build
src/layers/: activation_function.cpp  activation_function.hpp  dropout.cpp  dropout.hpp  linear.cpp  linear.hpp  meson.build  simple_activation_function.cpp  simple_activation_function.hpp  uniform_dropout.cpp  uniform_dropout.hpp  uniform_noise.cpp  uniform_noise.hpp
src/mnist/: dataset.hpp  dataset_entry.hpp  dump_dataset.cpp  dump_dataset.hpp  load_dataset.cpp  load_dataset.hpp  meson.build
src/optimizers/: adam.cpp  adam.hpp  meson.build  momentum.cpp  momentum.hpp  sgd.cpp  sgd.hpp
(+7 files in other folders)
